# papermill

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-plz.toml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  release-plz.yml
migrations/: 20260522000000_init.sql  20260523000000_add_sink_id.sql
src/: cli.rs  config.rs  credentials.rs  http.rs  keystore.rs  main.rs  mark.rs  paperless.rs  setup.rs  shutdown.rs  state.rs  transfer.rs  tty.rs
src/setup/: mod.rs  prompts.rs  sinks.rs
src/setup/sources/: bindings.rs  mod.rs
src/sinks/: mod.rs  wizard.rs
src/sinks/filesystem/: mod.rs  wizard.rs
src/sinks/paperless/: client.rs  mod.rs  wizard.rs
src/sources/: mock.rs  mod.rs
src/sources/o2/: auth.rs  callbacks.rs  client.rs  mod.rs  pow.rs  schemas.rs
src/sources/vodafone/: auth.rs  client.rs  mod.rs  schemas.rs
src/sources/wizard/: mod.rs  username_password.rs
