[package]
name = "papermill"
version = "0.1.0"
edition = "2024"
license = "BSD-2-Clause"
description = "Pull invoices from telco-style portals into a Paperless-ngx instance."
default-run = "papermill"

[features]
trace = ["dep:chromiumoxide", "dep:futures"]

[[bin]]
name = "papermill-trace"
required-features = ["trace"]

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.6", features = ["derive"] }
directories = "6.0"
hex = "0.4"
inquire = "0.9"
keyring = "4.0"
keyring-core = "1.0"
rand = "0.10"
regex = "1.12"
reqwest = { version = "0.13", default-features = false, features = ["json", "cookies", "rustls", "stream", "multipart", "query", "charset", "http2", "gzip"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.11"
sha2 = "0.11"
sqlx = { version = "0.9", default-features = false, features = ["runtime-tokio", "sqlite", "chrono", "migrate", "macros"] }
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros", "fs", "signal", "io-std", "io-util", "sync"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2.5", features = ["serde"] }

# Trace tool — only built with --features trace
chromiumoxide = { version = "0.9", default-features = false, features = ["rustls", "zip8"], optional = true }
futures = { version = "0.3", optional = true }
